Changes for DateTime::Set

0.1407  2004-03-16
- New methods:
  DateTime::SpanSet::current
  DateTime::Spanset::closest

- "Fixed" DateTime::SpanSet::next / previous 
  no longer "split" the returned spans.

- Added examples and parameter validation to map / grep

- DateTime::SpanSet::duration may return an 'infinite' 
  DateTime::Duration, instead of scalar infinity.

- Bugfix: DateTime::Spanset::union / intersection / ...
  correctly accept DateTime parameters.

0.1406  2004-03-15
- New methods: 
  DateTime::Set::map / grep
  DateTime::SpanSet::map / grep
  From a discussion with Andrew Pimlott and Dave Rolsky
- Cleanup "datetime" code from _recurrence.pm 
- iterate() marked as "internal"

0.1405  2004-03-15
- New method: DateTime::SpanSet::intersected_spans
  Suggested by Reinhold May
  Name suggested by Dave Rolsky

0.1404  2004-03-14
- New methods: DateTime::SpanSet::start_set / end_set 
  These are the inverse of the "from_sets" method.
  Suggested by Reinhold May

0.1403  2004-03-10
- new method DateTime::SpanSet::iterate
- DateTime::Set and DateTime::SpanSet methods do not mutate the set.
  This is the behaviour we had before version 0.13

0.1402  2004-03-08
- Recurrence functions can be used to generate bounded sets.
  See: t/16bounded_recurrence.t

- There is no limit on how small a recurrence can be.
  Recurrences as small as 1 nanosecond are possible.

[ *** BACKWARDS INCOMPATIBILITIES *** ]

  All modules that create their own recurrences
  must now be able to respond to DateTime::Infinite::Future
  and DateTime::Infinite::Past parameters. The easiest way
  to do this is to add this to the first line of the recurrence
  subroutines:

  next => sub {
     return $_[0] if $_[0]->is_infinite;
     ...
  }
  previous => sub {
     return $_[0] if $_[0]->is_infinite;
     ...
  }

0.1401  2003-11-06
- span() was returning the set, instead of the result.

0.14  2003-11-02
- duration() should not set $@ for sets with infinity duration.
  Reported by Dan Kubb.
