@@ -22,6 +22,7 @@ t/13add_recurrence.t
 t/14complement.t
 t/15time_zone.t
 t/16bounded_recurrence.t
+t/17quantize.t
 lib/DateTime/Set.pm
 lib/DateTime/Span.pm
 lib/DateTime/SpanSet.pm
